--- a/src/client/app/about/about.component.html
+++ b/src/client/app/about/about.component.html
@@ -1,13 +1,26 @@
-<p>Angular Seed is a starter project that implements best practices in coding, building and testing Angular apps.</p>
+<div id="page-wrapper" style="min-height: 535px;">
+  <div ui-view="" class="ng-scope">
+    <div class="container-fluid ng-scope">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 class="page-header">About</h1>
+        </div>
+      </div>
+      <div class="row">
+        <p>Angular Seed is a starter project that implements best practices in coding, building and testing Angular apps.</p>
 
-<h2 i18n>Features</h2>
-<ul>
-  <li>Ready to go, statically typed build system using Gulp for working with TypeScript.</li>
-  <li>Production and development builds.</li>
-  <li>Sample unit tests with Jasmine and Karma including code coverage via Istanbul.</li>
-  <li>End-to-end tests with Protractor.</li>
-  <li>Development server with live reload.</li>
-  <li>TypeScript definition management using Types.</li>
-  <li>Basic Service Worker, which implements "Cache then network strategy".</li>
-</ul>
-<p-calendar></p-calendar>
+        <h2 i18n>Features</h2>
+        <ul>
+          <li>Ready to go, statically typed build system using Gulp for working with TypeScript.</li>
+          <li>Production and development builds.</li>
+          <li>Sample unit tests with Jasmine and Karma including code coverage via Istanbul.</li>
+          <li>End-to-end tests with Protractor.</li>
+          <li>Development server with live reload.</li>
+          <li>TypeScript definition management using Types.</li>
+          <li>Basic Service Worker, which implements "Cache then network strategy".</li>
+        </ul>
+        <p-calendar></p-calendar>
+      </div>
+    </div>
+  </div>
+</div>
