--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -1,10 +1,23 @@
-<p>Howdy! Here's a list of awesome computer scientists. Do you know any others? Add to the list yourself.</p>
+<div id="page-wrapper"> 
+  <div ui-view="" class="ng-scope">
+    <div class="container-fluid ng-scope">
+       <div class="row"> 
+         <div class="col-lg-12">
+            <h1 class="page-header">Home</h1> 
+        </div>
+       </div>
+        <div class="row">
+          <p>Howdy! Here's a list of awesome computer scientists. Do you know any others? Add to the list yourself.</p>
 
-<form (submit)="addName()">
-  <input [(ngModel)]="newName" name="newName" placeholder="Awesome Computer Scientist">
-  <button type="submit">Add</button>
-</form>
-
-<ul>
-  <li *ngFor="let name of names">{{name}}</li>
-</ul>
+          <form (submit)="addName()">
+          <input [(ngModel)]="newName" name="newName" placeholder="Awesome Computer Scientist">
+            <button type="submit">Add</button>
+          </form>
+          
+          <ul>
+            <li *ngFor="let name of names">{{name}}</li>
+          </ul>
+        </div>
+    </div>
+  </div>
+  </div>
